[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pyrrhic-restic"
authors = [{name = "Jürgen Hötzel", email = "juergen@hoetzel.info"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.7"
dependencies = [
	     "cryptography >= 37.0.4",
	     "typer[all] >= 0.3.2",
	     "pydantic >= 1.9",	#FIXME: Move all to msgspec
	     "msgspec >= 0.9"
]

[project.scripts]
pyrrhic = "pyrrhic.cli.main:app"

[project.optional-dependencies]
test = [
    "pytest",
]

[project.urls]
Home = "https://github.com/juergenhoetzel/pyrrhic"

[tool.flit.module]
name = "pyrrhic"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "test",
]

[tool.black]
line-length = 160

[tool.isort]
profile = "black"
